# Learn_RAG

./: .gitignore  HYDE_RAG_GUIDE.md  LANGUAGE_DETECTION.md  OLLAMA_SETUP.md  PRIVATE_FILE_GUIDE.md  README.md  SUBQUERY_RAG_GUIDE.md  Untitled  main.py  pyproject.toml  test_comprehensive_rag.py  test_hyde_rag.py  test_private_file.py  test_rag_everyday.py  test_semantic_chunking.py  test_step_back_rag.py  test_subquery_rag.py  test_triple_hybrid_rag.py
.github/workflows/: README.md  cd.yml  ci.yml
src/: __init__.py  bm25_retriever.py  document_processor.py  hybrid_search.py  hybrid_subquery_hyde_rag.py  hyde_rag.py  llm_integration.py  prompt_formatter.py  step_back_rag.py  subquery_rag.py  triple_hybrid_rag.py  vector_retriever.py
src/retrievers/: __init__.py  base.py  bm25_retriever.py  hybrid_search.py  reranker.py  vector_retriever.py
