[project]
name = "learn-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "datasets>=4.4.2",
    "pandas>=2.3.3",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "requests>=2.31.0",
    "pypdf>=3.0.0",
    "docx2txt>=0.8",
    # 可選：用於語義分塊功能（如果不需要語義分塊，可以移除此行）
    "langchain-experimental>=0.0.50",
    "wikipedia>=1.4.0",
]


